--- a/HrDataSet.ipynb
+++ b/HrDataSet.ipynb
@@ -618,7 +618,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a859f4a948>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1aed0a01bc8>"
       ]
      },
      "execution_count": 9,
@@ -994,7 +994,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a85a93b908>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1aed13dd408>"
       ]
      },
      "execution_count": 11,
@@ -1064,7 +1064,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a85c29e808>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1aed14387c8>"
       ]
      },
      "execution_count": 13,
@@ -1097,7 +1097,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a85b98ca88>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1aed24df908>"
       ]
      },
      "execution_count": 14,
@@ -1130,7 +1130,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a85ba21948>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1aed2500f88>"
       ]
      },
      "execution_count": 15,
@@ -1163,7 +1163,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a85baef648>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1aed24f5348>"
       ]
      },
      "execution_count": 16,
@@ -1196,7 +1196,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a85bb9ee08>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1aed263af08>"
       ]
      },
      "execution_count": 17,
@@ -1229,7 +1229,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a85ba7e788>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1aed2b711c8>"
       ]
      },
      "execution_count": 18,
@@ -1262,7 +1262,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a85c137c88>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1aed2b71dc8>"
       ]
      },
      "execution_count": 19,
@@ -1295,7 +1295,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a85afcabc8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1aed2652f08>"
       ]
      },
      "execution_count": 20,
@@ -1328,7 +1328,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a85c13c088>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1aed1f32148>"
       ]
      },
      "execution_count": 21,
@@ -1360,7 +1360,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a85b0b24c8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1aed1bf1c48>"
       ]
      },
      "execution_count": 22,
@@ -4224,7 +4224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4233,12 +4233,12 @@
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.metrics import accuracy_score,classification_report,confusion_matrix\n",
-    "from sklearn.naive_bayes import MultinomialNB"
+    "from sklearn.naive_bayes import MultinomialNB,GaussianNB"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -4314,37 +4314,37 @@
       "                       min_samples_leaf=1, min_samples_split=2,\n",
       "                       min_weight_fraction_leaf=0.0, presort='deprecated',\n",
       "                       random_state=None, splitter='best')\n",
-      "Accuracy score 0.8027210884353742\n",
+      "Accuracy score 0.8117913832199547\n",
       "Confusion Metrix\n",
-      " [[332  48]\n",
-      " [ 39  22]]\n",
+      " [[334  46]\n",
+      " [ 37  24]]\n",
       "Classification report\n",
       "               precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.89      0.87      0.88       380\n",
-      "           1       0.31      0.36      0.34        61\n",
+      "           0       0.90      0.88      0.89       380\n",
+      "           1       0.34      0.39      0.37        61\n",
       "\n",
-      "    accuracy                           0.80       441\n",
-      "   macro avg       0.60      0.62      0.61       441\n",
-      "weighted avg       0.81      0.80      0.81       441\n",
+      "    accuracy                           0.81       441\n",
+      "   macro avg       0.62      0.64      0.63       441\n",
+      "weighted avg       0.82      0.81      0.82       441\n",
       "\n",
       "***********************************************************************************\n",
       "\n",
       "\n",
-      "MultinomialNB(alpha=1.0, class_prior=None, fit_prior=True)\n",
-      "Accuracy score 0.5328798185941043\n",
+      "GaussianNB(priors=None, var_smoothing=1e-09)\n",
+      "Accuracy score 0.7301587301587301\n",
       "Confusion Metrix\n",
-      " [[199 181]\n",
-      " [ 25  36]]\n",
+      " [[283  97]\n",
+      " [ 22  39]]\n",
       "Classification report\n",
       "               precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.89      0.52      0.66       380\n",
-      "           1       0.17      0.59      0.26        61\n",
+      "           0       0.93      0.74      0.83       380\n",
+      "           1       0.29      0.64      0.40        61\n",
       "\n",
-      "    accuracy                           0.53       441\n",
-      "   macro avg       0.53      0.56      0.46       441\n",
-      "weighted avg       0.79      0.53      0.60       441\n",
+      "    accuracy                           0.73       441\n",
+      "   macro avg       0.61      0.69      0.61       441\n",
+      "weighted avg       0.84      0.73      0.77       441\n",
       "\n",
       "***********************************************************************************\n",
       "\n",
@@ -4353,7 +4353,7 @@
     }
    ],
    "source": [
-    "model=[LogisticRegression(),SVC(),KNeighborsClassifier(),DecisionTreeClassifier(),MultinomialNB()]\n",
+    "model=[LogisticRegression(),SVC(),KNeighborsClassifier(),DecisionTreeClassifier(),GaussianNB()]\n",
     "for m in model:\n",
     "    print(m)\n",
     "    m.fit(x_train,y_train)\n",
@@ -4383,7 +4383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -4405,26 +4405,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy score 0.8662131519274376\n",
+      "Accuracy score 0.8707482993197279\n",
       "Confusion Metrix\n",
       " [[377   3]\n",
-      " [ 56   5]]\n",
+      " [ 54   7]]\n",
       "Classification report\n",
       "               precision    recall  f1-score   support\n",
       "\n",
       "           0       0.87      0.99      0.93       380\n",
-      "           1       0.62      0.08      0.14        61\n",
+      "           1       0.70      0.11      0.20        61\n",
       "\n",
       "    accuracy                           0.87       441\n",
-      "   macro avg       0.75      0.54      0.54       441\n",
-      "weighted avg       0.84      0.87      0.82       441\n",
+      "   macro avg       0.79      0.55      0.56       441\n",
+      "weighted avg       0.85      0.87      0.83       441\n",
       "\n"
      ]
     }
@@ -4441,16 +4441,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cross validation= [0.86190476 0.85238095 0.86666667 0.86666667 0.84285714 0.85714286\n",
-      " 0.85714286]\n",
-      "0.8578231292517006 0.007815731491888491\n"
+      "cross validation= [0.84285714 0.85714286 0.86190476 0.87619048 0.84761905 0.85714286\n",
+      " 0.86190476]\n",
+      "0.8578231292517007 0.009997917317482365\n"
      ]
     }
    ],
@@ -4462,15 +4462,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'max_features': 'auto', 'n_estimators': 200}\n",
-      "0.8612244897959183\n"
+      "{'max_features': 'sqrt', 'n_estimators': 700}\n",
+      "0.8598639455782312\n"
      ]
     }
    ],
@@ -4491,7 +4491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -4500,7 +4500,7 @@
        "['RF_Hr.pkl']"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
