--- a/HeartDiseaseDataSet.ipynb
+++ b/HeartDiseaseDataSet.ipynb
@@ -450,7 +450,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x276693f8948>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x12cdcdfc208>"
       ]
      },
      "execution_count": 8,
@@ -1204,7 +1204,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x27669c5d308>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x12cdd642708>"
       ]
      },
      "execution_count": 17,
@@ -1863,7 +1863,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x2766b39aa88>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x12cde0b0808>"
       ]
      },
      "execution_count": 23,
@@ -1895,7 +1895,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x2766a3a7548>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x12cdde37808>"
       ]
      },
      "execution_count": 24,
@@ -2176,49 +2176,49 @@
       "                       min_samples_leaf=1, min_samples_split=2,\n",
       "                       min_weight_fraction_leaf=0.0, presort='deprecated',\n",
       "                       random_state=None, splitter='best')\n",
-      "Accuracy score 0.4189189189189189\n",
+      "Accuracy score 0.44594594594594594\n",
       "Confusion Metrix\n",
-      " [[30  3  3  3  1]\n",
-      " [ 6  0  4  3  0]\n",
-      " [ 0  3  1  3  2]\n",
-      " [ 1  4  0  0  1]\n",
-      " [ 2  1  0  3  0]]\n",
+      " [[30  3  2  4  1]\n",
+      " [ 8  0  3  2  0]\n",
+      " [ 0  3  1  4  1]\n",
+      " [ 1  3  0  2  0]\n",
+      " [ 1  3  0  2  0]]\n",
       "Classification report\n",
       "               precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.77      0.75      0.76        40\n",
+      "           0       0.75      0.75      0.75        40\n",
       "           1       0.00      0.00      0.00        13\n",
-      "           2       0.12      0.11      0.12         9\n",
-      "           3       0.00      0.00      0.00         6\n",
+      "           2       0.17      0.11      0.13         9\n",
+      "           3       0.14      0.33      0.20         6\n",
       "           4       0.00      0.00      0.00         6\n",
       "\n",
-      "    accuracy                           0.42        74\n",
-      "   macro avg       0.18      0.17      0.18        74\n",
-      "weighted avg       0.43      0.42      0.42        74\n",
+      "    accuracy                           0.45        74\n",
+      "   macro avg       0.21      0.24      0.22        74\n",
+      "weighted avg       0.44      0.45      0.44        74\n",
       "\n",
       "***********************************************************************************\n",
       "\n",
       "\n",
-      "GaussianNB(priors=None, var_smoothing=1e-09)\n",
-      "Accuracy score 0.3783783783783784\n",
+      "MultinomialNB(alpha=1.0, class_prior=None, fit_prior=True)\n",
+      "Accuracy score 0.4594594594594595\n",
       "Confusion Metrix\n",
-      " [[24 11  0  3  2]\n",
-      " [ 5  1  2  1  4]\n",
-      " [ 0  3  0  2  4]\n",
-      " [ 0  0  2  0  4]\n",
-      " [ 0  3  0  0  3]]\n",
+      " [[29  8  1  1  1]\n",
+      " [ 6  2  2  0  3]\n",
+      " [ 2  3  1  1  2]\n",
+      " [ 0  2  1  0  3]\n",
+      " [ 2  2  0  0  2]]\n",
       "Classification report\n",
       "               precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.83      0.60      0.70        40\n",
-      "           1       0.06      0.08      0.06        13\n",
-      "           2       0.00      0.00      0.00         9\n",
+      "           0       0.74      0.72      0.73        40\n",
+      "           1       0.12      0.15      0.13        13\n",
+      "           2       0.20      0.11      0.14         9\n",
       "           3       0.00      0.00      0.00         6\n",
-      "           4       0.18      0.50      0.26         6\n",
+      "           4       0.18      0.33      0.24         6\n",
       "\n",
-      "    accuracy                           0.38        74\n",
-      "   macro avg       0.21      0.24      0.20        74\n",
-      "weighted avg       0.47      0.38      0.41        74\n",
+      "    accuracy                           0.46        74\n",
+      "   macro avg       0.25      0.26      0.25        74\n",
+      "weighted avg       0.46      0.46      0.46        74\n",
       "\n",
       "***********************************************************************************\n",
       "\n",
@@ -2231,25 +2231,25 @@
       "                       min_weight_fraction_leaf=0.0, n_estimators=100,\n",
       "                       n_jobs=None, oob_score=False, random_state=None,\n",
       "                       verbose=0, warm_start=False)\n",
-      "Accuracy score 0.5405405405405406\n",
+      "Accuracy score 0.5540540540540541\n",
       "Confusion Metrix\n",
-      " [[36  3  1  0  0]\n",
-      " [ 7  1  5  0  0]\n",
-      " [ 1  1  3  4  0]\n",
-      " [ 2  3  1  0  0]\n",
-      " [ 1  3  1  1  0]]\n",
+      " [[35  3  2  0  0]\n",
+      " [ 7  2  4  0  0]\n",
+      " [ 1  2  4  2  0]\n",
+      " [ 1  3  2  0  0]\n",
+      " [ 2  2  1  1  0]]\n",
       "Classification report\n",
       "               precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.77      0.90      0.83        40\n",
-      "           1       0.09      0.08      0.08        13\n",
-      "           2       0.27      0.33      0.30         9\n",
+      "           0       0.76      0.88      0.81        40\n",
+      "           1       0.17      0.15      0.16        13\n",
+      "           2       0.31      0.44      0.36         9\n",
       "           3       0.00      0.00      0.00         6\n",
       "           4       0.00      0.00      0.00         6\n",
       "\n",
-      "    accuracy                           0.54        74\n",
-      "   macro avg       0.23      0.26      0.24        74\n",
-      "weighted avg       0.46      0.54      0.50        74\n",
+      "    accuracy                           0.55        74\n",
+      "   macro avg       0.25      0.29      0.27        74\n",
+      "weighted avg       0.48      0.55      0.51        74\n",
       "\n",
       "***********************************************************************************\n",
       "\n",
@@ -2258,7 +2258,7 @@
     }
    ],
    "source": [
-    "model=[LogisticRegression(),SVC(),KNeighborsClassifier(),DecisionTreeClassifier(),GaussianNB(),RandomForestClassifier()]\n",
+    "model=[LogisticRegression(),SVC(),KNeighborsClassifier(),DecisionTreeClassifier(),MultinomialNB(),RandomForestClassifier()]\n",
     "for m in model:\n",
     "    print(m)\n",
     "    m.fit(x_train,y_train)\n",
@@ -2279,25 +2279,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy score 0.527027027027027\n",
+      "Accuracy score 0.581081081081081\n",
       "Confusion Metrix\n",
-      " [[36  3  1  0  0]\n",
+      " [[38  1  1  0  0]\n",
       " [ 7  2  4  0  0]\n",
-      " [ 2  2  1  4  0]\n",
-      " [ 0  5  1  0  0]\n",
-      " [ 1  5  0  0  0]]\n",
+      " [ 1  2  2  4  0]\n",
+      " [ 0  3  2  1  0]\n",
+      " [ 1  3  1  1  0]]\n",
       "Classification report\n",
       "               precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.78      0.90      0.84        40\n",
-      "           1       0.12      0.15      0.13        13\n",
-      "           2       0.14      0.11      0.12         9\n",
-      "           3       0.00      0.00      0.00         6\n",
+      "           0       0.81      0.95      0.87        40\n",
+      "           1       0.18      0.15      0.17        13\n",
+      "           2       0.20      0.22      0.21         9\n",
+      "           3       0.17      0.17      0.17         6\n",
       "           4       0.00      0.00      0.00         6\n",
       "\n",
-      "    accuracy                           0.53        74\n",
-      "   macro avg       0.21      0.23      0.22        74\n",
-      "weighted avg       0.46      0.53      0.49        74\n",
+      "    accuracy                           0.58        74\n",
+      "   macro avg       0.27      0.30      0.28        74\n",
+      "weighted avg       0.51      0.58      0.54        74\n",
       "\n"
      ]
     }
@@ -2320,8 +2320,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'max_features': 'log2', 'n_estimators': 700}\n",
-      "0.5952074810052601\n"
+      "{'max_features': 'auto', 'n_estimators': 700}\n",
+      "0.6020455873758036\n"
      ]
     }
    ],
@@ -2349,8 +2349,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cross validation= [0.62711864 0.66101695 0.55932203 0.54237288 0.55172414]\n",
-      "mean= 0.5883109292811222 STD= 0.047077505576432234\n"
+      "cross validation= [0.61016949 0.6779661  0.52542373 0.61016949 0.5862069 ]\n",
+      "mean= 0.6019871420222093 STD= 0.04902586335598675\n"
      ]
     }
    ],
